force-app/main/default/objects/geopointe__Shape__c/geopointe__Shape__c.object-meta.xml
<CustomObject>
    <description>Keeps track of custom shapes for use on the Map page.</description>
    <label>Geopointe Shape</label>
    <nameField>
        <label>Shape Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Shapes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>