force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Center__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Center__c</fullName>
    <description>The center point of a circle or the centroid of a polygon.</description>
    <label>Center</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>