force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Center_Label__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Center_Label__c</fullName>
    <description>The center label for shape field circles.</description>
    <label>Center Label</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>