force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Color__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color__c</fullName>
    <inlineHelpText>The hexadecimal color for this shape, such as #8ce013.</inlineHelpText>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>