force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Dissolve__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Dissolve__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, and the shape is comprised of multiple shapes it will dissolve the shapes.</inlineHelpText>
    <label>Dissolve</label>
    <type>Checkbox</type>
</CustomField>