force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Folder</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>geopointe__GP_Folder__c.Id</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipLabel>Geopointe Shapes</relationshipLabel>
    <relationshipName>Geopointe_Shapes</relationshipName>
    <type>Lookup</type>
</CustomField>