force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Geometry_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geometry_Last_Modified__c</fullName>
    <inlineHelpText>Date and time the last Shape geometry was modified. This field should not be modified by users.</inlineHelpText>
    <label>Geometry Last Modified</label>
    <type>DateTime</type>
</CustomField>