force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Invalid__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>