force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <type>TextArea</type>
</CustomField>