force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Label_Point__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Label_Point__c</fullName>
    <description>The point inside a polygon for displaying a label. Computed when polygon is saved.</description>
    <label>Label Point</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>