force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Lat_Lng_10__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Lat_Lng_10__c</fullName>
    <description>See Coordinates 1 field.</description>
    <label>Coordinates 10</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>