force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Lat_Lng_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Lat_Lng_1__c</fullName>
    <description>These fields contains longitude and latitude data for shapes. The structure follows the GeoJSON spec for coordinates: [[[lng, lat], [lng, lat]]] . IMPORTANT: Field name is Lat_Lng_n__c but GeoJSON stores ongitude first, latitude second. If array of lng/lat points is too long for one field it should be split across mutliple Lat_Lng_n__c fields.</description>
    <label>Coordinates 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>