force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Lat_Min__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Lat_Min__c</fullName>
    <externalId>true</externalId>
    <label>Min Latitude</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>