force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Lng_Max__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Lng_Max__c</fullName>
    <label>Max Longitude</label>
    <precision>13</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>