force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Opacity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Opacity__c</fullName>
    <inlineHelpText>The opacity value for this shape. Valid ranges are 0.00 - 1.00</inlineHelpText>
    <label>Opacity</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>