force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Radius__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Radius__c</fullName>
    <inlineHelpText>The radius for circle shapes. Kilometer or miles is defined by the Units field.</inlineHelpText>
    <label>Radius</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>