force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Show_Label__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Show_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Label</label>
    <type>Checkbox</type>
</CustomField>