force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Straddles_180__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Straddles_180__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only applies to Standard shapes. If checked, the shape straddles the 180th meridian.</inlineHelpText>
    <label>Straddles 180th Meridian</label>
    <type>Checkbox</type>
</CustomField>