force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Territory_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Territory_Plan_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the Territory Plan ID of the Territory Plan in Ascent Cloud Territory Planner.</inlineHelpText>
    <label>Territory Plan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>