force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Polyline</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
            <value>
                <fullName>Polygon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>