force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Units__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Units__c</fullName>
    <inlineHelpText>Miles or kilometers designating the unit of measure for this shape.</inlineHelpText>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kilometers</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>