force-app/main/default/objects/geopointe__Shape__c/fields/geopointe__Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Shape Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>